<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PaymentAmountFragment">


        <!-- Payment Amount -->
        <EditText
            android:id="@+id/paymentAmountEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_payment_amount"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="150dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"/>

        <!-- Payment Description -->
        <EditText
            android:id="@+id/paymentDescriptionEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_payment_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/paymentAmountEditText"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"/>

        <!-- Payment Method Radio Group -->
        <RadioGroup
            android:id="@+id/paymentMethodRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/paymentDescriptionEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp">

            <RadioButton
                android:id="@+id/radioButtonCreditCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit_card" />

            <RadioButton
                android:id="@+id/radioButtonDebitCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debit_card"
                android:layout_marginTop="8dp" />

        </RadioGroup>

        <!-- Confirm Payment Button -->
        <Button
            android:id="@+id/confirmPaymentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_payment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/paymentMethodRadioGroup"
            android:layout_marginTop="16dp"/>

        <!-- Cancel Payment Button -->
        <Button
            android:id="@+id/cancelPaymentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_payment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmPaymentButton"
            android:layout_marginTop="16dp"/>

        <!-- Payment Progress -->
        <ProgressBar
            android:id="@+id/paymentProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/cancelPaymentButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- Payment Status -->
        <TextView
            android:id="@+id/paymentStatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/processing_payment"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/paymentProgressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- Payment Result -->
        <TextView
            android:id="@+id/paymentResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/paymentStatusTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
