<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.TransactionHistoryFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <TextView
            android:id="@+id/transfersInitialsTextView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="JD"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:background="@drawable/circle_background" />

        <TextView
            android:id="@+id/transfersNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/transfersInitialsTextView"
            android:layout_alignTop="@id/transfersInitialsTextView"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/recipient_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/transferTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transfers"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_below="@id/transfersInitialsTextView"
            android:layout_marginTop="10dp"/>



    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/transactionRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/sendMoneyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_money"
        android:layout_gravity="center"
        android:layout_marginTop="16dp" />

</LinearLayout>
